force-app/main/default/objects/Int_Agreement_Exposure__c/Int_Agreement_Exposure__c.object-meta.xml
<CustomObject>
    <description>Int Agreement Exposure</description>
    <label>Int Agreement Exposure</label>
    <nameField>
        <displayFormat>AGE-{0000000000}</displayFormat>
        <label>Agreement Exposure Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreements Exposure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>