force-app/main/default/objects/Int_Agreement_Exposure__c/fields/Exposure_Booked__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Booked__c</fullName>
    <description>Exposure Booked</description>
    <label>Exposure Booked</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>