force-app/main/default/objects/Int_Agreement_Exposure__c/fields/Exposure_Type__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Type__c</fullName>
    <description>Exposure Type</description>
    <label>Exposure Type</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>