force-app/main/default/objects/Int_Agreement_Exposure__c/fields/Other_Arrears_Amount__c.field-meta.xml
<CustomField>
    <fullName>Other_Arrears_Amount__c</fullName>
    <description>Other Arrears Amount</description>
    <label>Other Arrears Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>