force-app/main/default/objects/Int_Agreement_Exposure__c/fields/Other_Days_in_Arrears__c.field-meta.xml
<CustomField>
    <fullName>Other_Days_in_Arrears__c</fullName>
    <description>Other Days in Arrears</description>
    <label>Other Days in Arrears</label>
    <length>19</length>
    <type>Text</type>
</CustomField>