force-app/main/default/objects/Int_Agreement_Exposure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Arrears_Amount__c</columns>
    <columns>Committed__c</columns>
    <columns>Exposure_Booked__c</columns>
    <columns>Exposure_Type__c</columns>
    <columns>Days_In_Arrears__c</columns>
    <columns>Agreement_Number__c</columns>
    <columns>Agreement_Name__c</columns>
    <columns>Net_Principal_Balance_Amount__c</columns>
    <columns>Accrued_Interest_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>